--- a/examples/video-conversion/converter/pom.xml
+++ b/examples/video-conversion/converter/pom.xml
@@ -84,7 +84,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-rio-plugin</artifactId>
-                <version>4.0-M1</version>
+                <version>4.0-M2-SNAPSHOT</version>
                 <extensions>true</extensions>
                 <configuration>
                     <environment>
