Initial work for a Cluster Locator and Manager for the Private LAN platform.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@146 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -27,6 +27,7 @@
         <module>amazon-sdb</module>
         <module>amazon-ec2-bootstrapper</module>
         <module>amazon-ec2-provisioner</module>
+        <module>private-lan-provisioner</module>
         <!--module>elastic-grid-oar</module-->
         <!--module>examples</module-->
         <!--<module>jabber-cli</module>-->
