Added support for private LAN platform in the REST API. Refactored many things and introduced some initial work on a Cloud Federation Manager.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@150 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/applications/rest-api/pom.xml
+++ b/applications/rest-api/pom.xml
@@ -14,11 +14,18 @@
     <dependencies>
 
         <!-- Elastic Grid EC2 provisioner -->
-        <dependency>
+		<dependency>
             <groupId>${pom.groupId}</groupId>
             <artifactId>amazon-ec2-provisioner</artifactId>
             <version>${pom.version}</version>
         </dependency>
+
+		<!-- Elastic Grid LAN provisioner -->
+		<dependency>
+			<groupId>${pom.groupId}</groupId>
+			<artifactId>private-lan-provisioner</artifactId>
+			<version>${pom.version}</version>
+		</dependency>
 
         <!-- Elastic Grid Cluster model -->
         <dependency>
