--- a/modules/amazon-ec2-provisioner/pom.xml
+++ b/modules/amazon-ec2-provisioner/pom.xml
@@ -97,7 +97,13 @@
         <dependency>
             <groupId>org.easymock</groupId>
             <artifactId>easymock</artifactId>
-            <version>2.3</version>
+            <version>2.4</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.easymock</groupId>
+            <artifactId>easymockclassextension</artifactId>
+            <version>2.4</version>
             <scope>test</scope>
         </dependency>
 
@@ -158,7 +164,7 @@
                     </implementationIns>
                     <implementationTopclasses>
                         <implementationTopclass>com.elasticgrid.monitor.EC2ProvisionMonitorImpl</implementationTopclass>
-                        <implementationTopclass>com.elasticgrid.amazon.ec2.costmodel.EC2SmallInstanceCostModel</implementationTopclass>
+                        <implementationTopclass>com.elasticgrid.platforms.ec2.costmodel.EC2SmallInstanceCostModel</implementationTopclass>
                         <implementationTopclass>com.elasticgrid.amazon.ec2.sla.EC2ScalingPolicyHandler</implementationTopclass>
                     </implementationTopclasses>
 
