--- a/modules/private-lan-provisioner/pom.xml
+++ b/modules/private-lan-provisioner/pom.xml
@@ -75,7 +75,7 @@
         <dependency>
             <groupId>org.easymock</groupId>
             <artifactId>easymock</artifactId>
-            <version>2.3</version>
+            <version>2.4</version>
             <scope>test</scope>
         </dependency>
 
@@ -136,7 +136,7 @@
                     </implementationIns>
                     <implementationTopclasses>
                         <implementationTopclass>com.elasticgrid.monitor.EC2ProvisionMonitorImpl</implementationTopclass>
-                        <implementationTopclass>com.elasticgrid.amazon.ec2.costmodel.EC2SmallInstanceCostModel</implementationTopclass>
+                        <implementationTopclass>com.elasticgrid.platforms.ec2.costmodel.EC2SmallInstanceCostModel</implementationTopclass>
                         <implementationTopclass>com.elasticgrid.amazon.ec2.sla.EC2ScalingPolicyHandler</implementationTopclass>
                     </implementationTopclasses>
 
