Initial work on an OpString for the REST API.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@152 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/platforms/private-lan-platform/pom.xml
+++ b/platforms/private-lan-platform/pom.xml
@@ -38,11 +38,11 @@
 		<!--</dependency>-->
 
         <!-- Framework dependencies -->
-		<!--<dependency>-->
-			<!--<groupId>${pom.groupId}</groupId>-->
-			<!--<artifactId>amazon-sqs</artifactId>-->
-			<!--<version>${pom.version}</version>-->
-		<!--</dependency>-->
+		<dependency>
+			<groupId>${pom.groupId}</groupId>
+			<artifactId>amazon-sqs</artifactId>
+			<version>${pom.version}</version>
+		</dependency>
 		
 		<!-- Kernel dependencies -->
         <!--<dependency>-->
