--- a/applications/rest-api/pom.xml
+++ b/applications/rest-api/pom.xml
@@ -68,7 +68,7 @@
                 </exclusion>
                 <exclusion>
                     <groupId>org.springframework</groupId>
-                    <artifactId>spring-mvc</artifactId>
+                    <artifactId>spring-webmvc</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -159,14 +159,15 @@
                         <rio.home>${env.RIO_HOME}</rio.home>
                         <jini.home>${env.JINI_HOME}</jini.home>
                     </environment>
+                    <opstring>${basedir}/src/main/conf/RestAPI.groovy</opstring>
 
                     <implementationIns>
                         <implementationIn>com.elasticgrid.rest</implementationIn>
-                        <implementationIn>org.restlet</implementationIn>
-                        <implementationIn>org.restlet.ext.spring</implementationIn>
-                        <implementationIn>org.restlet.ext.jibx</implementationIn>
-                        <implementationIn>com.noelios.restlet</implementationIn>
-                        <implementationIn>com.noelios.restlet.ext.jetty</implementationIn>
+                        <!--<implementationIn>org.restlet</implementationIn>-->
+                        <!--<implementationIn>org.restlet.ext.spring</implementationIn>-->
+                        <!--<implementationIn>org.restlet.ext.jibx</implementationIn>-->
+                        <!--<implementationIn>com.noelios.restlet</implementationIn>-->
+                        <!--<implementationIn>com.noelios.restlet.ext.jetty</implementationIn>-->
                     </implementationIns>
                     <implementationTopclasses>
                         <implementationTopclass>com.elasticgrid.rest.RestJSB</implementationTopclass>
@@ -179,12 +180,12 @@
                         <implementationTopclass>com.elasticgrid.rest.ServiceResource</implementationTopclass>
                     </implementationTopclasses>
 
-                    <clientIns>
-                        <clientIn>org.restlet</clientIn>
-                    </clientIns>
-                    <clientTopclasses>
-                        <clientTopclass>org.restlet.Client</clientTopclass>
-                    </clientTopclasses>
+                    <!--<clientIns>-->
+                        <!--<clientIn>org.restlet</clientIn>-->
+                    <!--</clientIns>-->
+                    <!--<clientTopclasses>-->
+                        <!--<clientTopclass>org.restlet.Client</clientTopclass>-->
+                    <!--</clientTopclasses>-->
 
                     <!--<downloadableIns>-->
                         <!--<downloadableIn>com.elasticgrid.rest</downloadableIn>-->
