Modified build order.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@156 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/applications/pom.xml
+++ b/applications/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.elasticgrid</groupId>
-    <artifactId>elastic-grid-applications</artifactId>
+    <artifactId>applications</artifactId>
     <packaging>pom</packaging>
     <name>Modules</name>
     <prerequisites>
@@ -63,6 +63,19 @@
     </reporting>
 
     <dependencies>
+        <dependency>
+            <groupId>com.elasticgrid</groupId>
+            <artifactId>amazon-ec2-platform</artifactId>
+            <version>${pom.version}</version>
+            <type>pom</type>
+        </dependency>
+        <dependency>
+            <groupId>com.elasticgrid</groupId>
+            <artifactId>private-lan-platform</artifactId>
+            <version>${pom.version}</version>
+            <type>pom</type>
+        </dependency>
+
         <!-- Groovy dependencies -->
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
