Private LAN Platform: - renamed cybernode to agent for consistency with Elastic Grid terminology - fixed missing JARs in classpath
REST API:
- fixed some classpath issues
- started work allowing to run the REST API as a boot process

git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@159 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/applications/rest-api/service/pom.xml
+++ b/applications/rest-api/service/pom.xml
@@ -103,11 +103,11 @@
 			<artifactId>cglib</artifactId>
 			<version>2.1_3</version>
 		</dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>jul-to-slf4j</artifactId>
-            <version>1.5.3</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.slf4j</groupId>-->
+            <!--<artifactId>jul-to-slf4j</artifactId>-->
+            <!--<version>1.5.3</version>-->
+        <!--</dependency>-->
 
         <!-- Spring dependencies -->
         <dependency>
