--- a/examples/video-conversion/oar/pom.xml
+++ b/examples/video-conversion/oar/pom.xml
@@ -39,7 +39,7 @@
                 <extensions>true</extensions>
                 <configuration>
                     <environment>
-                        <rio.home>${env.RIO_HOME}</rio.home>
+                        <rio.home>${env.EG_HOME}</rio.home>
                         <jini.home>${env.JINI_HOME}</jini.home>
                     </environment>
                     <opstring>${basedir}/src/main/conf/VideoConversion.groovy</opstring>
