--- a/platforms/private-lan-platform/pom.xml
+++ b/platforms/private-lan-platform/pom.xml
@@ -72,6 +72,17 @@
 		</dependency>
 
         <dependency>
+            <groupId>stax</groupId>
+            <artifactId>stax-api</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.jibx</groupId>-->
+            <!--<artifactId>jibx-run</artifactId>-->
+            <!--<version></version>-->
+        <!--</dependency>-->
+
+        <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>5.8</version>
