REST API: package the REST API as a boot process.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@161 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/platforms/private-lan-platform/pom.xml
+++ b/platforms/private-lan-platform/pom.xml
@@ -15,6 +15,13 @@
     </prerequisites>
 
     <dependencies>
+        <!-- Applications dependencies -->
+		<dependency>
+			<groupId>com.elasticgrid.applications</groupId>
+			<artifactId>rest-api</artifactId>
+			<version>${pom.version}</version>
+		</dependency>
+
         <!-- Substrates dependencies -->
 		<!--<dependency>-->
 			<!--<groupId>com.elasticgrid.substrates</groupId>-->
