--- a/platforms/private-lan-platform/config/start-all.config
+++ b/platforms/private-lan-platform/config/start-all.config
@@ -5,7 +5,7 @@
  */
 import java.net.URL;
 import org.rioproject.boot.BootUtil;
-import com.elasticgrid.platforms.lan.boot.ServiceDescriptorUtil;
+import com.elasticgrid.boot.ServiceDescriptorUtil;
 import com.sun.jini.config.ConfigUtil;
 import com.sun.jini.start.ServiceDescriptor;
 
@@ -19,7 +19,7 @@ com.sun.jini.start {
     reggieConfig = "${EG_HOME}${/}config${/}reggie.config";
     monitorConfig = "${EG_HOME}${/}config${/}monitor.config";
     agentConfig = "${EG_HOME}${/}config${/}agent.config";
-    restConfig = "${EG_HOME}${/}config${/}rest.config";
+    restApiConfig = "${EG_HOME}/config${/}rest-api.config";
 
     serviceDescriptors = new ServiceDescriptor[] {
         ServiceDescriptorUtil.getWebster(policy,
@@ -35,7 +35,10 @@ com.sun.jini.start {
         ServiceDescriptorUtil.getMonitor(policy, monitorConfig),
 
         /* Elastic Grid Agent */
-        ServiceDescriptorUtil.getCybernode(policy, agentConfig)
+        ServiceDescriptorUtil.getCybernode(policy, agentConfig),
+
+        /* Elastic Grid REST API */
+        ServiceDescriptorUtil.getRestApi(policy, restApiConfig)
 
     };    
 
