--- a/platforms/private-lan-platform/config/start-monitor.config
+++ b/platforms/private-lan-platform/config/start-monitor.config
@@ -5,7 +5,7 @@
  */
 import java.net.URL;
 import org.rioproject.boot.BootUtil;
-import com.elasticgrid.platforms.lan.boot.ServiceDescriptorUtil;
+import com.elasticgrid.boot.ServiceDescriptorUtil;
 import com.sun.jini.config.ConfigUtil;
 import com.sun.jini.start.NonActivatableServiceDescriptor;
 import com.sun.jini.start.ServiceDescriptor;
