--- a/platforms/private-lan-platform/config/start-rest-api.config
+++ b/platforms/private-lan-platform/config/start-rest-api.config
@@ -4,7 +4,7 @@
  */
 import java.net.URL;
 import org.rioproject.boot.BootUtil;
-import com.elasticgrid.platforms.lan.boot.ServiceDescriptorUtil;
+import com.elasticgrid.boot.ServiceDescriptorUtil;
 import com.sun.jini.start.ServiceDescriptor;
 
 com.sun.jini.start {
@@ -17,10 +17,14 @@ com.sun.jini.start {
 
     serviceDescriptors = new ServiceDescriptor[] {
         ServiceDescriptorUtil.getWebster(policy,
-                                         "0",
+                                         "9010",
                                          new String[] {jiniLibDLPath,";",
-                                                       egLibPath,";",
-                                                       jiniLibPath}),
+                                                       jiniLibPath,";",
+                                                       egLibPath, ";",
+                                                       deployDir}),
+        /* Jini Lookup Service */
+        ServiceDescriptorUtil.getLookup(policy, reggieConfig),
+        
         /* Elastic Grid REST API */
         ServiceDescriptorUtil.getRestApi(policy, restApiConfig)
     };
