--- a/platforms/private-lan-platform/config/rest-api.config
+++ b/platforms/private-lan-platform/config/rest-api.config
@@ -9,53 +9,27 @@ import org.rioproject.log.LoggerConfig.LogHandlerConfig;
 import org.rioproject.fdh.FaultDetectionHandlerFactory;
 
 /* --------------------------------------------------------------------------
- * Declare Provision Monitor properties
+ * Declare REST API properties
  * --------------------------------------------------------------------------*/
-org.rioproject.monitor {
-    initialLookupGroups = new String[] { "rio" };
-    //initialLookupGroups = new String[] {"${user.name}"};
-    serviceName = "Elastic Grid Monitor";
-    serviceComment = "Elastic Grid Dynamic Provisioning Agent";
-    jmxName = "com.elasticgrid.monitor:type=Monitor";
-
-    //initialOpStrings = new String[]{"${RIO_HOME}/examples/calculator/deploy/calculator.xml" };
-
+com.elasticgrid.rest {
     loggerConfigs = new LoggerConfig[] {
-        new LoggerConfig("org.rioproject.monitor",
-                          Level.FINE,
-                          false,
-                          new LogHandlerConfig[] {
-                              new LogHandlerConfig(new ConsoleHandler())
-                          }),
-        new LoggerConfig("org.rioproject.monitor.provision",
-                          Level.FINEST,
-                          false,
-                          new LogHandlerConfig[] {
-                              new LogHandlerConfig(new ConsoleHandler())
-                          }),
-        new LoggerConfig("org.rioproject.monitor.sbi",
-                          Level.FINEST,
-                          false,
-                          new LogHandlerConfig[] {
-                              new LogHandlerConfig(new ConsoleHandler())
-                          }),
-        new LoggerConfig("org.rioproject.monitor.peer",
-                          Level.FINE,
-                          false,
-                          new LogHandlerConfig[] {
-                              new LogHandlerConfig(new ConsoleHandler())
-                          }),
-        new LoggerConfig("net.jini.lookup.JoinManager", Level.OFF)
-    };
-
-    static prefix = "org.rioproject.fdh";
-    
-    /* Configure a FaultDetectionHandler for the ProvisionMonitor */
-    fdh = "org.rioproject.fdh.HeartbeatFaultDetectionHandler";
-    configArg = new String[]{"-",
-                             fdh+".heartbeatPeriod=10000",
-                             fdh+".heartbeatGracePeriod=10000"
-    };
-    faultDetectionHandler =
-        FaultDetectionHandlerFactory.getClassBundle(fdh, configArg);
+        new LoggerConfig("com.elasticgrid.rest",
+                         Level.FINE,
+                         false,
+                         new LogHandlerConfig[] {
+                             new LogHandlerConfig(new ConsoleHandler())}
+                         ),
+        new LoggerConfig("org.springframework",
+                         Level.SEVERE,
+                         false,
+                         new LogHandlerConfig[] {
+                             new LogHandlerConfig(new ConsoleHandler())}
+                         ),
+        new LoggerConfig("com.noelios.restlet",
+                         Level.SEVERE,
+                         false,
+                         new LogHandlerConfig[] {
+                             new LogHandlerConfig(new ConsoleHandler())}
+                         ),
+        };
 }
