--- a/platforms/private-lan-platform/config/start-agent.config
+++ b/platforms/private-lan-platform/config/start-agent.config
@@ -4,7 +4,7 @@
  */
 import java.net.URL;
 import org.rioproject.boot.BootUtil;
-import com.elasticgrid.platforms.lan.boot.ServiceDescriptorUtil;
+import com.elasticgrid.boot.ServiceDescriptorUtil;
 import com.sun.jini.start.ServiceDescriptor;
 
 com.sun.jini.start {
