git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@163 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/platforms/private-lan-platform/config/rest-api.config
+++ b/platforms/private-lan-platform/config/rest-api.config
@@ -12,8 +12,13 @@ import org.rioproject.fdh.FaultDetectionHandlerFactory;
  * Declare REST API properties
  * --------------------------------------------------------------------------*/
 com.elasticgrid.rest {
+    initialLookupGroups = new String[] { "rio" };
+    serviceName = "Elastic Grid REST API";
+    serviceComment = "Elastic Grid REST API";
+    jmxName = "com.elasticgrid.rest:type=API";
+
     loggerConfigs = new LoggerConfig[] {
-        new LoggerConfig("com.elasticgrid.rest",
+        new LoggerConfig("com.elasticgrid",
                          Level.FINE,
                          false,
                          new LogHandlerConfig[] {
@@ -32,4 +37,13 @@ com.elasticgrid.rest {
                              new LogHandlerConfig(new ConsoleHandler())}
                          ),
         };
+
+    static prefix = "org.rioproject.fdh";
+    /* Configure a FaultDetectionHandler for the ProvisionMonitor */
+    fdh = "org.rioproject.fdh.HeartbeatFaultDetectionHandler";
+    configArg = new String[]{"-",
+                             fdh+".heartbeatPeriod=10000",
+                             fdh+".heartbeatGracePeriod=10000"
+    };
+    faultDetectionHandler = FaultDetectionHandlerFactory.getClassBundle(fdh, configArg);
 }
