This made it for a fixed by hand EC2 installation from a broken AMI. Now if everything goes well, all I have to do is to rebundle the AMI and YES we should be able to deploy Spring dm Server out-of-the-box. Wiki will be updated soon in order to highlight the EC2 deployment steps.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@169 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/applications/rest-api/pom.xml
+++ b/applications/rest-api/pom.xml
@@ -3,8 +3,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
         <groupId>com.elasticgrid</groupId>
-        <artifactId>elastic-grid-applications</artifactId>
-        <version>0.8.2</version>
+        <artifactId>applications</artifactId>
+        <version>0.8.3</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.elasticgrid.applications</groupId>
@@ -28,7 +28,7 @@
 			<version>${pom.version}</version>
 		</dependency>
 
-        <!-- Elastic Grid Cluster model -->
+        <!-- Elastic Grid Manager -->
         <dependency>
             <groupId>com.elasticgrid</groupId>
             <artifactId>elastic-grid-manager</artifactId>
