--- a/platforms/amazon-ec2-platform/config/agent-agent.config
+++ b/platforms/amazon-ec2-platform/config/agent-agent.config
@@ -26,30 +26,28 @@ org.rioproject.cybernode {
         new LookupLocator(masterHost)
     };
     initialLookupGroups = new String[] {"rio"};
-    //initialLookupGroups = new String[] {"${user.name}"};
-    serviceName = "Cybernode";
-    serviceComment = "Dynamic Agent";
-    jmxName = "org.rioproject.cybernode:type=Cybernode";
+    serviceName = "Elastic Grid Agent";
+    serviceComment = "Elastic Grid Dynamic Agent";
+    jmxName = "com.elasticgrid.agent:type=Agent";
 
     provisionEnabled = Boolean.TRUE;
     persistentProvisioning = Boolean.TRUE;
     provisionRoot = "/mnt";
-    
+
     loggerConfigs = new LoggerConfig[] {
         new LoggerConfig("org.rioproject.cybernode",
                          Level.FINE,
                          false,
                          new LogHandlerConfig[] {
-                             new LogHandlerConfig(
-                                 new ConsoleHandler(), Level.FINE)
-                         })
+                             new LogHandlerConfig(new ConsoleHandler())}
+                         )
         };
 
 
     /* Configure a FaultDetectionHandler for the Cybernode */
     fdh = "org.rioproject.fdh.HeartbeatFaultDetectionHandler";
     /* Point to this configuration file */
-    configFile = "${RIO_HOME}/config/cybernode.config";
+    configFile = "${EG_HOME}/config/agent.config";
     faultDetectionHandler =
         FaultDetectionHandlerFactory.getClassBundle(fdh, configFile);
 }
@@ -67,7 +65,7 @@ org.rioproject.fdh.HeartbeatFaultDetectionHandler {
  * --------------------------------------------------------------------------*/
 org.rioproject.boot {
     /* The compute resource configuration simply refers to this file  */
-    computeResourceConfig = "${RIO_HOME}${/}config${/}cybernode.config";
+    computeResourceConfig = "${EG_HOME}${/}config${/}agent.config";
     computeResource = new ComputeResource(new String[] {computeResourceConfig},
                                           (Configuration)$data);
 }
@@ -152,5 +150,5 @@ net.jini.discovery.LookupDiscovery {
 }
 
 org.rioproject.jmx {
-    serviceName = "Cybernode JMX Agent";
+    serviceName = "Elastic Grid JMX Agent";
 }
