--- a/platforms/amazon-ec2-platform/config/start-agent.config
+++ b/platforms/amazon-ec2-platform/config/start-agent.config
@@ -13,7 +13,7 @@ com.sun.jini.start {
     egLibPath = "${EG_HOME}/lib";
     policy = "${EG_HOME}/policy/policy.all";
 
-    restApiConfig = "${EG_HOME}/config/rest-api.config";
+    agentConfig = "${EG_HOME}/config/agent.config";
 
     serviceDescriptors = new ServiceDescriptor[] {
         ServiceDescriptorUtil.getWebster(policy,
@@ -21,8 +21,9 @@ com.sun.jini.start {
                                          new String[] {jiniLibDLPath,";",
                                                        egLibPath,";",
                                                        jiniLibPath}),
-        /* Elastic Grid REST API */
-        ServiceDescriptorUtil.getRestApi(policy, restApiConfig)
-    };
+        /* Elastic Grid Agent */
+        ServiceDescriptorUtil.getCybernode(policy, agentConfig)
+
+    };    
 
 }
