--- a/platforms/private-lan-platform/config/agent.config
+++ b/platforms/private-lan-platform/config/agent.config
@@ -1,5 +1,5 @@
 /*
- * Configuration for am Elastic Grid Agent
+ * Configuration for an Elastic Grid Agent
  */
 import java.net.InetAddress;
 import java.util.logging.ConsoleHandler;
@@ -23,11 +23,10 @@ org.rioproject.cybernode {
     initialLookupGroups = new String[] {"rio"};
     serviceName = "Elastic Grid Agent";
     serviceComment = "Elastic Grid Dynamic Agent";
-
-    provisionEnabled = Boolean.valueOf(true);
-
     jmxName = "com.elasticgrid.agent:type=Agent";
-    nativeLibDirectory = "${RIO_NATIVE_DIR}";    
+
+    provisionEnabled = Boolean.TRUE;
+    persistentProvisioning = Boolean.TRUE;
 
     loggerConfigs = new LoggerConfig[] {
         new LoggerConfig("org.rioproject.cybernode",
