--- a/modules/amazon-ec2-bootstrapper/pom.xml
+++ b/modules/amazon-ec2-bootstrapper/pom.xml
@@ -4,7 +4,7 @@
     <parent>
     	<groupId>com.elasticgrid</groupId>
 	    <artifactId>elastic-grid-modules</artifactId>
-	    <version>0.8.2</version>
+	    <version>0.8.3</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>amazon-ec2-bootstrapper</artifactId>
@@ -52,6 +52,11 @@
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
             <version>1.0.4</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.4</version>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
